--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -689,7 +689,7 @@
                   <tr>
                     <td>
 		      <a name="SESSION-7"></a><a name="PAPER-56"></a><a name="PAPER-17"></a>
-                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 7: <a> (Chair: TBA)</h3>
+                      <h3>THU 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 7: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -705,7 +705,7 @@
 			</li>
 			<br>
 			<li><strong><a style="color:#B40431;">Normalising Lustre Preserves Security</a><br>
-			        </strong>
+			        Sanjiva Prasad and Rathnakar Madhukar Yerraguntla</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -723,7 +723,7 @@
                    <tr>
                     <td>
 		       <a name="SESSION-8"></a>
-                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 8 (Keynote Speaker): Grigore Rosu</a>
+                       <h3>THU 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 8 (Keynote Speaker): Grigore Rosu</a>
 			    (Chair: Peter Csaba &Ouml;lveczky</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
@@ -768,7 +768,7 @@
                   </tr>               
                  <tr>
                     <td>
-		      <a name="SESSION-10"></a><a name="PAPER-"></a><a name="PAPER-"></a>
+		      <a name="SESSION-10"></a><a name="PAPER-52"></a><a name="PAPER-31"></a><a name="PAPER-2"></a>
                       <h3>FRI 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 10: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
@@ -777,22 +777,22 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;"></a><br>
-				</strong>
+                        <li><strong><a style="color:#B40431;">Reactive Synthesis from Visibly Register Pushdown Automata</a><br>
+				Ryoma Senda, Yoshiaki Takata and Hiroyuki Seki</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
+			<li><strong><a style="color:#B40431;">AlCons: Deductive Synthesis of Sorting Algorithms in Theorema</a><br>
+			        Isabela Dramnesc and Tudor Jebelean</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        e</strong>
+			<li><strong><a style="color:#B40431;">Learning Probabilistic Automata using Residuals</a><br>
+			        Wenjing Chu, Shuo Chen and Marcello Bonsangue</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -809,8 +809,8 @@
                   </tr>               
                   <tr>
                     <td>
-		      <a name="SESSION-7"></a><a name="PAPER-56"></a><a name="PAPER-17"></a>
-                      <h3>FRI 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
+		      <a name="SESSION-11"></a><a name="PAPER-48"></a><a name="PAPER-41"></a><a name="PAPER-3"></a>
+                      <h3>FRI 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 11: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -818,22 +818,22 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;"></a><br>
-				</strong>
+                        <li><strong><a style="color:#B40431;">A Proof Method for Local Sufficient Completeness of Term Rewriting Systems</a><br>
+				Ryoma Senda, Yoshiaki Takata and Hiroyuki Seki</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
+			<li><strong><a style="color:#B40431;">A Calculus for Attribute-based Memory Updates</a><br>
+			        Michele Pasqua and Marino Miculan</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
+			<li><strong><a style="color:#B40431;">ComplexityParser: an automatic tool for certifying poly-time complexity of Java programs</a><br>
+			        Emmanuel Hainry, Emmanuel Jeandel, Romain Péchoux and Olivier Zeyen</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -844,8 +844,8 @@
                   </tr>
                   <tr>
                     <td>
- 		     <a name="SESSION-7"></a><a name="PAPER-"></a><a name="PAPER-"></a>
-                     <h3>FRI 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: <a> (Chair: TBA)</h3>
+ 		     <a name="SESSION-12"></a><a name="PAPER-"></a><a name="PAPER-"></a>
+                     <h3>FRI 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 12: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -888,13 +888,13 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 		Wenjing Chu, Shuo Chen and Marcello Bonsangue
 	    </strong>
 	    <br>
-	    [<a class="link" style="color:#B40431;" href="#PAPER-">presentation schedule</a>]
+	    [<a class="link" style="color:#B40431;" href="#PAPER-2">presentation schedule</a>]
             <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">ComplexityParser: an automatic tool for certifying poly-time complexity of Java programs</a><br>
 		Emmanuel Hainry, Emmanuel Jeandel, Romain Péchoux and Olivier Zeyen
             </strong>
-	    <br>[<a class="link" style="color:#B40431;" href="#PAPER-">presentation schedule</a>]
+	    <br>[<a class="link" style="color:#B40431;" href="#PAPER-3">presentation schedule</a>]
             <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a>
@@ -937,9 +937,13 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 	     [<a class="link" style="color:#B40431;" href="#PAPER-16">presentation schedule</a>]
              <br>&nbsp;
 	</li>
-	<li><strong><a style="color:#B40431;">Normalising Lustre Preserves Security</a><br>
-    Sanjiva Prasad and Rathnakar Madhukar Yerraguntla
-    </strong>
+	<li><strong><a style="color:#B40431;">Normalising Lustre Preserves Security</a>
+		<br>
+		Sanjiva Prasad and Rathnakar Madhukar Yerraguntla
+	    </strong>
+	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-17">presentation schedule</a>]
+            <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a>
 		<br>
@@ -965,21 +969,29 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 	    [<a class="link" style="color:#B40431;" href="#PAPER-29">presentation schedule</a>]
 	     <br>&nbsp;
 	</li>
-	<li><strong><a style="color:#B40431;">AlCons: Deductive Synthesis of Sorting Algorithms in Theorema</a><br>
-    Isabela Dramnesc and Tudor Jebelean
-    </strong>
+	<li><strong><a style="color:#B40431;">AlCons: Deductive Synthesis of Sorting Algorithms in Theorema</a>
+		<br>
+		Isabela Dramnesc and Tudor Jebelean
+            </strong>
+	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-31">presentation schedule</a>]
+	     <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">A Mechanically Verified Theory of Contracts</a>
-		[<a class="link" style="color:#B40431;" href="#PAPER-39">presentation schedule</a>]
 		<br>
 		St&eacute;phane Kastenbaum, Benoît Boyer and Jean-Pierre Talpin
              </strong>
 	     <br>
+	     [<a class="link" style="color:#B40431;" href="#PAPER-39">presentation schedule</a>]
 	     <br>&nbsp;
 	</li>
-	<li><strong><a style="color:#B40431;">A Calculus for Attribute-based Memory Updates</a><br>
-    Michele Pasqua and Marino Miculan
-    </strong>
+	<li><strong><a style="color:#B40431;">A Calculus for Attribute-based Memory Updates</a>
+		<br>
+		Michele Pasqua and Marino Miculan
+	    </strong>
+	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-41">presentation schedule</a>]
+	    <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Some Aspects of the Database Resilience</a>
 		<br>
@@ -993,9 +1005,13 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Tomoki Shiraishi, Kentaro Kikuchi and Takahito Aoto
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">Reactive Synthesis from Visibly Register Pushdown Automata</a><br>
-    Ryoma Senda, Yoshiaki Takata and Hiroyuki Seki
-    </strong>
+	<li><strong><a style="color:#B40431;">Reactive Synthesis from Visibly Register Pushdown Automata</a>
+		<br>
+		Ryoma Senda, Yoshiaki Takata and Hiroyuki Seki
+            </strong>
+	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-52">presentation schedule</a>]
+	    <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a>
 		<br>
