--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -50,9 +50,9 @@
    Click on the day or the session name to see the session detailed information.</p>
 <table border="1">
   <tr align="left">
-    <th style='border-bottom:none'>DAY</th>
-    <th style='border-bottom:none'>SESSION NAME or BREAK</th>
-    <th style='border-bottom:none'>Duration</th>	  
+    <th style='border-bottom:none'>&nbsp;DAY&nbsp;</th>
+    <th style='border-bottom:none'>&nbsp;SESSION NAME&nbsp;</th>
+    <th style='border-bottom:none'>&nbsp;Duration&nbsp;</th>	  
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
@@ -99,8 +99,8 @@
   </tr>
 	
   <tr align = "left">
-    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>WEDNESDAY</a></stong></td>
-    <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
+    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>&nbsp;WEDNESDAY&nbsp;</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#OPENING">&nbsp;OPENING&nbsp;</a></stong></td>
     <td><strong>15 min.</strong></td>  
     <td><strong>1:15</strong></td>
     <td><strong>2:15</strong></td>
@@ -123,8 +123,8 @@
     <td><strong>19:15</strong></td>
   </tr>
   <tr align = "left">
-    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>8 September</a></strong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-1">1. Kim Larsen's Keynote Talk</a></strong></td>
+    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>&nbsp;8 September&nbsp;</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-1">&nbsp;1. Kim Larsen's Keynote Talk&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
@@ -148,7 +148,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. Efficient Model Checking Methods</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-2">&nbsp;2. Efficient Model Checking Methods&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>3:00</strong></td>
     <td><strong>4:00</strong></td>
@@ -172,7 +172,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-3">3. Database and Distributed Transactions</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-3">&nbsp;3. Database and Distributed Transactions&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>5:30</strong></td>
     <td><strong>6:30</strong></td>
@@ -196,7 +196,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-4">4. Formalization and Verification in Coq and Isabelle</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-4">&nbsp;4. Formalization and Verification in Coq and Isabelle&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>7:00</strong></td>
     <td><strong>8:00</strong></td>
@@ -220,8 +220,8 @@
   </tr>
 	
   <tr align = "left">
-    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>THURSDAY</a></stong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-5">5. Wil van der Aalst's Keynote Talk</a></strong></td>
+    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>&nbsp;THURSDAY&nbsp;</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-5">&nbsp;5. Wil van der Aalst's Keynote Talk&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
@@ -244,8 +244,8 @@
     <td><strong>19:30</strong></td>
   </tr>
   <tr align = "left">
-    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>9 September</a></strong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-6">6. Security and Privacy</a></strong></td>
+    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>&nbsp;9 September&nbsp;</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-6">&nbsp;6. Security and Privacy&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>3:00</strong></td>
     <td><strong>4:00</strong></td>
@@ -269,7 +269,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-7">7. Security and Privacy</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-7">&nbsp;7. Security and Privacy&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>5:30</strong></td>
     <td><strong>6:30</strong></td>
@@ -293,7 +293,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-8">8. Grigore Rosu's Keynote Talk</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-8">&nbsp;8. Grigore Rosu's Keynote Talk&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>7:00</strong></td>
     <td><strong>8:00</strong></td>
@@ -317,8 +317,8 @@
   </tr>
 	
   <tr align = "left">
-    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#FRI";>FRIDAY</a></stong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-9">9. Alan Dix' Keynote Talk</a></strong></td>
+    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#FRI";>&nbsp;FRIDAY&nbsp;</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-9">&nbsp;9. Alan Dix' Keynote Talk&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
@@ -341,8 +341,8 @@
     <td><strong>19:30</strong></td>
   </tr>
   <tr align = "left">
-    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>10 September</a></strong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-10">10. Synthesis and Learning</a></strong></td>
+    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>&nbsp;10 September&nbsp;</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-10">&nbsp;10. Synthesis and Learning&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>3:00</strong></td>
     <td><strong>4:00</strong></td>
@@ -366,7 +366,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-11">11. Systems Calculi and Analysis</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-11">&nbsp;11. Systems Calculi and Analysis&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>5:30</strong></td>
     <td><strong>6:30</strong></td>
@@ -390,7 +390,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-12">12. Quantum Computing</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-12">&nbsp;12. Quantum Computing&nbsp;</a></strong></td>
     <td><strong>30 min.</strong></td>  
     <td><strong>7:00</strong></td>
     <td><strong>8:00</strong></td>
@@ -414,7 +414,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;">CLOSING</a></strong></td>
+    <td><strong><a style="color:#B40431;">&nbsp;CLOSING&nbsp;</a></strong></td>
     <td><strong>15 min.</strong></td>  
     <td><strong>7:30</strong></td>
     <td><strong>8:30</strong></td>
