--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -844,7 +844,7 @@
                   </tr>
                   <tr>
                     <td>
- 		     <a name="SESSION-12"></a><a name="PAPER-"></a><a name="PAPER-"></a>
+ 		     <a name="SESSION-12"></a><a name="PAPER-25"></a></a>
                      <h3>FRI 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 12: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
@@ -1001,9 +1001,13 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 	    [<a class="link" style="color:#B40431;" href="#PAPER-47">presentation schedule</a>]
 	    <br>&nbsp;
 	</li>
-	<li><strong><a style="color:#B40431;">A Proof Method for Local Sufficient Completeness of Term Rewriting Systems</a><br>
-    Tomoki Shiraishi, Kentaro Kikuchi and Takahito Aoto
-    </strong>
+	<li><strong><a style="color:#B40431;">A Proof Method for Local Sufficient Completeness of Term Rewriting Systems</a>
+		<br>
+		Tomoki Shiraishi, Kentaro Kikuchi and Takahito Aoto
+            </strong>
+	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-">presentation schedule</a>]
+	    <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Reactive Synthesis from Visibly Register Pushdown Automata</a>
 		<br>
@@ -1017,6 +1021,7 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 		<br>
 		Ross Horne, Sjouke Mauw and Semen Yurkov
              </strong>
+	     <br>
 	     [<a class="link" style="color:#B40431;" href="#PAPER-54">presentation schedule</a>]
              <br>&nbsp;
 	</li>
@@ -1024,6 +1029,7 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 		<br>
 		Sayan Biswas, Kangsoo Jung and Catuscia Palamidessi
              </strong>
+	     <br>
 	     [<a class="link" style="color:#B40431;" href="#PAPER-17">presentation schedule</a>]
              <br>&nbsp;
 	</li>
