Update and rename programme-GMT+6.html to programme-provisional.html

--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -438,7 +438,7 @@
   </tr>
 
 </table>
-(*) One day after.
+<strong>(*) One day after.</strong>
 
 <h3 style="color:#B40431;">Time zones:</h3>
 <ul>
