--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -655,7 +655,7 @@
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">Card-based Cryptographic Protocols with a Standard Deck of Cards Using Private Operations</a>
 				<br>
-				Wenjing Chu, Shuo Chen and Marcello Bonsangue</strong>
+				Yoshifumi Manabe and Hibiki Ono</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
