--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -853,8 +853,8 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;"></a><br>
-				</strong>
+                        <li><strong><a style="color:#B40431;">A New Connective in Natural Deduction, and its Application to Quantum Computing</a><br>
+				Alejandro Díaz-Caro and Gilles Dowek</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -958,7 +958,7 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
                 Alejandro Díaz-Caro and Gilles Dowek
              </strong>
 	     <br>
-	     [<a class="link" style="color:#B40431;" href="#PAPER-">presentation schedule</a>]
+	     [<a class="link" style="color:#B40431;" href="#PAPER-25">presentation schedule</a>]
 	     <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Accelerating SpMV Multiplication in Probabilistic Model Checkers using GPUs</a>
