--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -819,7 +819,7 @@
                          The session video recording will be linked from here.
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">A Proof Method for Local Sufficient Completeness of Term Rewriting Systems</a><br>
-				Ryoma Senda, Yoshiaki Takata and Hiroyuki Seki</strong>
+				Tomoki Shiraishi, Kentaro Kikuchi and Takahito Aoto</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
