--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -39,7 +39,7 @@
   <td align="center">
     <hr> <h2><a style="color:#B40431;" href="#SCHEDULE">Session Schedule by Time Zone</a> | <a
 		style="color:#B40431;" href="#DETAILED">Detailed Programme</a> | <a
-		style="color:#B40431;" href="#PAPERS">List of accepte papers</a>
+		style="color:#B40431;" href="#PAPERS">List of accepted papers</a>
 	 </h2>
      <hr>
    </td>
