--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -35,6 +35,15 @@
 <h2>18th International Colloquium on Theoretical Aspects of Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10, 2021</strong></h2>
 <h1 style="color:#B40431;">PROGRAMME</h1>
+<tr height="10pt">
+  <td align="center">
+    <hr> <h2><a style="color:#B40431;" href="#SCHEDULE">Session Schedule by Time Zone</a> | <a
+		style="color:#B40431;" href="#DETAILED">Detailed Programme</a> | <a
+		style="color:#B40431;" href="#PAPERS">List of accepted papers</a>
+	 </h2>
+     <hr>
+   </td>
+</tr>
 </center>
 <a name="SCHEDULE"></a><h2 style="color:#B40431;">SESSION SCHEDULE BY TIME ZONE</h2>
 <p>This table shows the starting time of each session by time zone.
