--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -64,11 +64,12 @@
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
-    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
-    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
+    <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
@@ -77,6 +78,7 @@
     <th style='border-top:none'></th>
     <th style='border-top:none'></th>
     <th style='border-top:none'></th>
+    <th style='border-top:none'><a style="color:#B40431;">-7:00</a></th>
     <th style='border-top:none'><a style="color:#B40431;">-6:00</a></th>
     <th style='border-top:none'><a style="color:#B40431;">-5:00</a></th>
     <th style='border-top:none'><a style="color:#B40431;">-4:00</a></th>
@@ -102,6 +104,7 @@
     <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>&nbsp;WEDNESDAY&nbsp;</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#OPENING">&nbsp;OPENING&nbsp;</a></stong></td>
     <td><strong>15 min.</strong></td>  
+    <td><strong>0:15</strong></td>
     <td><strong>1:15</strong></td>
     <td><strong>2:15</strong></td>
     <td><strong>3:15</strong></td>
@@ -126,6 +129,7 @@
     <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>&nbsp;8 September&nbsp;</a></strong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-1">&nbsp;1. Kim Larsen's Keynote Talk&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
+    <td><strong>0:30</strong></td>
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
     <td><strong>3:30</strong></td>
@@ -150,6 +154,7 @@
     <td style="border-top:none;border-bottom:none;"></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-2">&nbsp;2. Efficient Model Checking Methods&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
+    <td><strong>2:00</strong></td>
     <td><strong>3:00</strong></td>
     <td><strong>4:00</strong></td>
     <td><strong>5:00</strong></td>
@@ -174,6 +179,7 @@
     <td style="border-top:none;border-bottom:none;"></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-3">&nbsp;3. Database and Distributed Transactions&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
+    <td><strong>4:30</strong></td>
     <td><strong>5:30</strong></td>
     <td><strong>6:30</strong></td>
     <td><strong>7:30</strong></td>
@@ -198,6 +204,7 @@
     <td style="border-top:none;border-bottom:none;"></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-4">&nbsp;4. Formalization and Verification in Coq and Isabelle&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
+    <td><strong>6:00</strong></td>
     <td><strong>7:00</strong></td>
     <td><strong>8:00</strong></td>
     <td><strong>9:00</strong></td>
@@ -223,6 +230,7 @@
     <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>&nbsp;THURSDAY&nbsp;</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-5">&nbsp;5. Wil van der Aalst's Keynote Talk&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
+    <td><strong>0:30</strong></td>
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
     <td><strong>3:30</strong></td>
@@ -247,6 +255,7 @@
     <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>&nbsp;9 September&nbsp;</a></strong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-6">&nbsp;6. Security and Privacy&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
+    <td><strong>2:00</strong></td>
     <td><strong>3:00</strong></td>
     <td><strong>4:00</strong></td>
     <td><strong>5:00</strong></td>
@@ -271,6 +280,7 @@
     <td style="border-top:none;border-bottom:none;"></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-7">&nbsp;7. Security and Privacy&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
+    <td><strong>4:30</strong></td>
     <td><strong>5:30</strong></td>
     <td><strong>6:30</strong></td>
     <td><strong>7:30</strong></td>
@@ -295,6 +305,7 @@
     <td style="border-top:none;border-bottom:none;"></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-8">&nbsp;8. Grigore Rosu's Keynote Talk&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
+    <td><strong>6:00</strong></td>
     <td><strong>7:00</strong></td>
     <td><strong>8:00</strong></td>
     <td><strong>9:00</strong></td>
@@ -320,6 +331,7 @@
     <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#FRI";>&nbsp;FRIDAY&nbsp;</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-9">&nbsp;9. Alan Dix' Keynote Talk&nbsp;</a></strong></td>
     <td><strong>60 min.</strong></td>  
+    <td><strong>0:30</strong></td>
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
     <td><strong>3:30</strong></td>
@@ -344,6 +356,7 @@
     <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>&nbsp;10 September&nbsp;</a></strong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-10">&nbsp;10. Synthesis and Learning&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
+    <td><strong>2:00</strong></td>
     <td><strong>3:00</strong></td>
     <td><strong>4:00</strong></td>
     <td><strong>5:00</strong></td>
@@ -368,6 +381,7 @@
     <td style="border-top:none;border-bottom:none;"></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-11">&nbsp;11. Systems Calculi and Analysis&nbsp;</a></strong></td>
     <td><strong>90 min.</strong></td>  
+    <td><strong>4:30</strong></td>
     <td><strong>5:30</strong></td>
     <td><strong>6:30</strong></td>
     <td><strong>7:30</strong></td>
@@ -392,6 +406,7 @@
     <td style="border-top:none;border-bottom:none;"></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-12">&nbsp;12. Quantum Computing&nbsp;</a></strong></td>
     <td><strong>30 min.</strong></td>  
+    <td><strong>6:00</strong></td>
     <td><strong>7:00</strong></td>
     <td><strong>8:00</strong></td>
     <td><strong>9:00</strong></td>
@@ -416,6 +431,7 @@
     <td style="border-top:none;border-bottom:none;"></td>
     <td><strong><a style="color:#B40431;">&nbsp;CLOSING&nbsp;</a></strong></td>
     <td><strong>15 min.</strong></td>  
+    <td><strong>6:30</strong></td>
     <td><strong>7:30</strong></td>
     <td><strong>8:30</strong></td>
     <td><strong>9:30</strong></td>
@@ -441,9 +457,13 @@
 
 <h3 style="color:#B40431;">Time zones:</h3>
 <ul>
-  <li><strong><a style="color:#B40431;">GMT-6:00</a> - </strong> Central America, US/Canada Mountain Time</li>
-  <li><strong><a style="color:#B40431;">GMT-5:00</a> - </strong> Bogota, Lima, Mexico City, Quito, Rio Branco, US/Canada Central Time</li>
-  <li><strong><a style="color:#B40431;">GMT-4:00</a> - </strong> Caracas, Cuba, La Paz, Santiago, US/Canada Eastern Time</li>
+  <li><strong><a style="color:#B40431;">GMT-7:00</a> - </strong> US/Canada Pacific Time (Vancouver, Seattle, Los Angeles, San Francisco, Las Vegas)</li>
+  <li><strong><a style="color:#B40431;">GMT-6:00</a> - </strong> Central America, US/Canada Mountain Time
+	                                                                                (Edmonton, Salt Lake City, Denver, Phoenix, El Paso)</li>
+  <li><strong><a style="color:#B40431;">GMT-5:00</a> - </strong> Bogota, Lima, Mexico City, Quito, Rio Branco, US/Canada Central Time
+	                                                                                (Winnipeg, Chicago, DAllas, Houston)</li>
+  <li><strong><a style="color:#B40431;">GMT-4:00</a> - </strong> Caracas, Cuba, La Paz, Santiago, US/Canada Eastern Time
+	                                                                                (Toronto, Detroit, Boston, New York, Washington DC, Atlanta, Miami) </li>
   <li><strong><a style="color:#B40431;">GMT-3:00</a> - </strong> Brasilia, Buenos Aires, Montevideo</li>
   <li><strong><a style="color:#B40431;">GMT:</a> - </strong> Azores, Monrovia, Reykjavik</li>
   <li><strong><a style="color:#B40431;">GMT+1:00</a> - </strong> Dublin, Lisbon, London, West Central Africa</li>
