--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -461,13 +461,14 @@
   <li><strong><a style="color:#B40431;">GMT-6:00</a> - </strong> Central America, US/Canada Mountain Time
 	                                                                                (Edmonton, Salt Lake City, Denver, Phoenix, El Paso)</li>
   <li><strong><a style="color:#B40431;">GMT-5:00</a> - </strong> Bogota, Lima, Mexico City, Quito, Rio Branco, US/Canada Central Time
-	                                                                                (Winnipeg, Chicago, DAllas, Houston)</li>
+	                                                                                (Winnipeg, Chicago, Dallas, Houston)</li>
   <li><strong><a style="color:#B40431;">GMT-4:00</a> - </strong> Caracas, Cuba, La Paz, Santiago, US/Canada Eastern Time
 	                                                                                (Toronto, Detroit, Boston, New York, Washington DC, Atlanta, Miami) </li>
   <li><strong><a style="color:#B40431;">GMT-3:00</a> - </strong> Brasilia, Buenos Aires, Montevideo</li>
   <li><strong><a style="color:#B40431;">GMT:</a> - </strong> Azores, Monrovia, Reykjavik</li>
   <li><strong><a style="color:#B40431;">GMT+1:00</a> - </strong> Dublin, Lisbon, London, West Central Africa</li>
-  <li><strong><a style="color:#B40431;">GMT+2:00</a> - </strong> Pretoria, CEST (Berlin, Budapest, Madrid, Oslo, Paris, Rome, Stockholm, Vienna)</li>
+  <li><strong><a style="color:#B40431;">GMT+2:00</a> - </strong> Pretoria, CEST
+	                       (Amsterdam, Athens, Berlin, Bern, Brussels, Bucharest, Budapest, Madrid, Oslo, Paris, Praga, Rome, Sofia, Stockholm, Vienn, Warsaw)</li>
   <li><strong><a style="color:#B40431;">GMT+3:00</a> - </strong> Beirut, Jerusalem, Minsk, Moscow, Nairobi, St. Petersburg</li>
   <li><strong><a style="color:#B40431;">GMT+4:00</a> - </strong> Abu Dhabi, Muscat, Yerevan</li>
   <li><strong><a style="color:#B40431;">GMT+4:30</a> - </strong> Kabul, Tehran</li>
