--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -468,8 +468,8 @@
   <li><strong><a style="color:#B40431;">GMT:</a> - </strong> Azores, Monrovia, Reykjavik</li>
   <li><strong><a style="color:#B40431;">GMT+1:00</a> - </strong> Dublin, Lisbon, London, West Central Africa</li>
   <li><strong><a style="color:#B40431;">GMT+2:00</a> - </strong> Pretoria, CEST
-	                       (Amsterdam, Athens, Berlin, Bern, Brussels, Bucharest, Budapest, Madrid, Oslo, Paris, Praga, Rome, Sofia, Stockholm, Vienn, Warsaw)</li>
-  <li><strong><a style="color:#B40431;">GMT+3:00</a> - </strong> Beirut, Jerusalem, Minsk, Moscow, Nairobi, St. Petersburg</li>
+	                       (Amsterdam, Berlin, Bern, Brussels, Budapest, Madrid, Oslo, Paris, Praga, Rome, Sofia, Stockholm, Vienn, Warsaw)</li>
+  <li><strong><a style="color:#B40431;">GMT+3:00</a> - </strong> Nairobi, Athens, Bucharest, Sofia, Beirut, Jerusalem, Minsk, Moscow, St. Petersburg</li>
   <li><strong><a style="color:#B40431;">GMT+4:00</a> - </strong> Abu Dhabi, Muscat, Yerevan</li>
   <li><strong><a style="color:#B40431;">GMT+4:30</a> - </strong> Kabul, Tehran</li>
   <li><strong><a style="color:#B40431;">GMT+5:00</a> - </strong> Ekaterinburg, Tashkent, West Kazakhstan (Aqtobe, Atyrau, Oral)</li>
