--- a/programme-provisional.html
+++ b/programme-provisional.html
@@ -466,10 +466,11 @@
 	                                                                                (Toronto, Detroit, Boston, New York, Washington DC, Atlanta, Miami) </li>
   <li><strong><a style="color:#B40431;">GMT-3:00</a> - </strong> Brasilia, Buenos Aires, Montevideo</li>
   <li><strong><a style="color:#B40431;">GMT:</a> - </strong> Azores, Monrovia, Reykjavik</li>
-  <li><strong><a style="color:#B40431;">GMT+1:00</a> - </strong> Dublin, Lisbon, London, West Central Africa</li>
+  <li><strong><a style="color:#B40431;">GMT+1:00</a> - </strong> West Central Africa, WEST (Dublin, Lisbon, London)</li>
   <li><strong><a style="color:#B40431;">GMT+2:00</a> - </strong> Pretoria, CEST
 	                       (Amsterdam, Berlin, Bern, Brussels, Budapest, Madrid, Oslo, Paris, Praga, Rome, Sofia, Stockholm, Vienn, Warsaw)</li>
-  <li><strong><a style="color:#B40431;">GMT+3:00</a> - </strong> Nairobi, Athens, Bucharest, Sofia, Beirut, Jerusalem, Minsk, Moscow, St. Petersburg</li>
+  <li><strong><a style="color:#B40431;">GMT+3:00</a> - </strong> Nairobi, Beirut, Jerusalem, EEST (Athens, Bucharest, Helsinki, Kiev, Sofia),
+	                                                                                     FET (Minsk, Moscow, St. Petersburg)</li>
   <li><strong><a style="color:#B40431;">GMT+4:00</a> - </strong> Abu Dhabi, Muscat, Yerevan</li>
   <li><strong><a style="color:#B40431;">GMT+4:30</a> - </strong> Kabul, Tehran</li>
   <li><strong><a style="color:#B40431;">GMT+5:00</a> - </strong> Ekaterinburg, Tashkent, West Kazakhstan (Aqtobe, Atyrau, Oral)</li>
